[gd_scene load_steps=14 format=3 uid="uid://lmk3sywc11nk"]

[ext_resource type="Script" path="res://Enemies/pearl.gd" id="1_5q18b"]
[ext_resource type="Texture2D" uid="uid://bk57dvabie1fw" path="res://Assets/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Pearl Idle/1.png" id="1_e2eit"]
[ext_resource type="Texture2D" uid="uid://cvvle0e5eg5qi" path="res://Assets/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Pearl Destroyed/1.png" id="2_jv5qf"]
[ext_resource type="Texture2D" uid="uid://dflahvh647gsn" path="res://Assets/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Pearl Destroyed/2.png" id="3_rm04o"]
[ext_resource type="Texture2D" uid="uid://basyay7wtd1d2" path="res://Assets/Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Pearl Destroyed/3.png" id="4_jxm4a"]
[ext_resource type="AudioStream" uid="uid://73ddj7vkq7rb" path="res://Assets/explosion_trim.ogg" id="6_o12cf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f0216"]
radius = 5.0

[sub_resource type="Animation" id="Animation_sghtx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_pearl:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_e2eit")]
}

[sub_resource type="Animation" id="Animation_1c2rr"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_pearl:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_e2eit"), ExtResource("2_jv5qf"), ExtResource("3_rm04o"), ExtResource("4_jxm4a")]
}

[sub_resource type="Animation" id="Animation_c1pfw"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_pearl:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_e2eit")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4gaeg"]
_data = {
"RESET": SubResource("Animation_sghtx"),
"dead": SubResource("Animation_1c2rr"),
"idle": SubResource("Animation_c1pfw")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2mt1"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 98, 0)
initial_velocity_max = 60.0
angular_velocity_min = -128.0
angular_velocity_max = 128.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4mulx"]
radius = 8.0

[node name="Pearl" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
collision_mask = 2
motion_mode = 1
script = ExtResource("1_5q18b")
hit_speed = 0.0
health = 1

[node name="col_pearl" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f0216")

[node name="spr_pearl" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_e2eit")

[node name="pearl_anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_4gaeg")
}

[node name="explosion" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
process_material = SubResource("ParticleProcessMaterial_g2mt1")
texture = ExtResource("4_jxm4a")
one_shot = true

[node name="damage_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="damage_shape" type="CollisionShape2D" parent="damage_area"]
shape = SubResource("CircleShape2D_4mulx")
debug_color = Color(0.988235, 0, 0.294118, 0.419608)

[node name="explosion_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_o12cf")
bus = &"SFX"

[node name="dead_timer" type="Timer" parent="."]
one_shot = true

[node name="autodestruct" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="dead_timer" to="." method="_on_dead_timer_timeout"]
[connection signal="timeout" from="autodestruct" to="." method="_on_autodestruct_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
